[package]
name = "ap-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
regex = "1.7.0"
reqwest = "0.11.12"
scraper = "0.13.0"
tokio = { version = "1.21.2", features = ["full"] }
